--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
+<!DOCTYPE html>
+<html lang="es" >
+<head>
+  <meta charset="UTF-8">
+  <title>Calculadora</title>
+  <link rel="stylesheet" href="./style.css">
+  
+  <link rel="shortcut icon" href="./Calculator.ico" />
+    <script
+      src="https://kit.fontawesome.com/4c536a6bd5.js"
+      crossorigin="anonymous"
+    ></script>
 
+</head>
+<body>
+<section>
+  <div class="container">
+    <div class="calculator">
+      <div class="display">
+        <div class="display-1">0</div>
+        <div class="display-2">0</div>
+        <div class="temp-result"></div>
+      </div>
+      <div class="all_button">
+        <div class="button all-clear">C</div>
+        <div class="button last-entity-clear">CE</div>
+        <div class="button operation">%</div>
+        <div class="button operation">/</div>
+        <div class="button number">7</div>
+        <div class="button number">8</div>
+        <div class="button number">9</div>
+        <div class="button operation">x</div>
+        <div class="button number">4</div>
+        <div class="button number">5</div>
+        <div class="button number">6</div>
+        <div class="button operation">-</div>
+        <div class="button number">1</div>
+        <div class="button number">2</div>
+        <div class="button number">3</div>
+        <div class="button operation">+</div>
+        <div class="button btn-0 number">0</div>
+        <div class="button number dot">.</div>
+        <div class="button equal">=</div>
+      </div>
+    </div>
+  </div>
+</section>
+<footer class="footer">
+    <p>Copyright © 2021 Luis Carlos (@LuisCFV11) </p>
+    <a (@LuisCFV11)  href="https://github.com/LuisCFV11" target="_blank">
+       <i class="fab fa-github"></i></a>
+  </footer>
+  <script  src="./app.js"></script>
+
+</body>
+</html>
